# rust-backtester

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/config/: universe.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  types.rs
backend/crates/api/src/market_data/: cache.rs  mod.rs  polygon.rs
backend/crates/api/src/routes/: backtests.rs  health.rs  mod.rs  universe.rs
backend/crates/api/src/storage/: runs.rs
backend/crates/api/tests/: api_integration.rs
backend/crates/engine/: Cargo.toml
backend/crates/engine/src/: indicators.rs  lib.rs  metrics.rs  types.rs
backend/crates/engine/tests/: engine_e2e.rs
frontend/: Dockerfile  next-env.d.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtests/[id]/: page.tsx
frontend/app/engineering/: page.tsx
frontend/app/strategies/: page.tsx
frontend/components/: credibility-strip.tsx  nav.tsx  strategy-cards.tsx
frontend/components/backtest/: assumptions-panel.tsx  metrics-cards.tsx  results-dashboard.tsx  run-demo-buttons.tsx  run-form.tsx  trade-blotter.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  table.tsx
frontend/lib/: api.ts  chart-theme.ts  types.ts
frontend/tests/: run-demo.spec.ts
frontend/tests/fixtures/: demo_results.json
(+12 files in other folders)
