[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
engine = { path = "../engine" }

anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower_governor = { version = "0.4", features = ["axum", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
urlencoding = "2.1"

[dev-dependencies]
axum-test = "15.3"
